--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,15 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf' ] // Specify font files
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+project.ext.react = [
+    enableHermes: false,  // Disable Hermes
+]
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
