--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,6 @@ yarn-error.log
 !.yarn/versions
 
 # Firebase config
-firebaseConfig
-BottomSheet
-app packages list
+firebaseConfig.js
+BottomSheet.js
+allPackagesList.json
