--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli": "^14.1.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "firebase": "^10.14.1",
@@ -19,9 +20,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
-    "react-native-image-picker": "^7.1.2",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "^3.15.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
@@ -42,7 +41,6 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
