--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.4.1",
     "firebase": "^10.14.1",
     "flashSend": "file:",
+    "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
