--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-responsive-screen": "^1.4.2",
