--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -29,5 +29,5 @@ project(':lottie-react-native').projectDir = new File(rootProject.projectDir, '.
 include ':react-native-navigation-bar-color'
 project(':react-native-navigation-bar-color').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation-bar-color/android')
 
-// include ':react-native-reanimated'
-// project(':react-native-reanimated').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-reanimated/android')
+include ':react-native-reanimated'
+project(':react-native-reanimated').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-reanimated/android')
