--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-popup-menu": "^0.16.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
