--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli": "^14.1.1",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^21.2.0",
+    "@react-native-firebase/storage": "^21.2.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "firebase": "^10.14.1",
