--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flashsend",
-  "main": "node_modules/expo/AppEntry.js",
-  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "version": "3.0.0",
   "scripts": {
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
@@ -21,8 +21,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/native": "^7.0.0",
     "expo": "^52.0.11",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
@@ -32,7 +31,7 @@
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.8",
-    "expo-router": "^4.0.9",
+    "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -40,17 +39,15 @@
     "flashsend": "file:",
     "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
-    "react-native": "^0.76.2",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "^2.6.4",
     "react-native-image-picker": "^7.1.2",
     "react-native-mmkv": "^3.1.0",
-    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
