--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "jest-react-native": "^18.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
