--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,12 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "app/_layout.js"
-, "services/ExpoPushNotifications.js", "components/ThemeSelector.tsx", "app/userProfile.js", "app/usapp/userProfileContent.jsp/chatRoom.js", "app/chatRoom.js", "src/MessagesContext.js"]
+    "app/_layout.js",
+    "services/ExpoPushNotifications.js",
+    "components/ThemeSelector.tsx",
+    "app/userProfile.js",
+    "app/usapp/userProfileContent.jsp/chatRoom.js",
+    "app/chatRoom.js",
+    "src/MessagesContext.js"
+  ]
 }
