--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
+    "au-react-native-toast": "^1.0.8",
     "expo": "^52.0.11",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
@@ -36,7 +37,6 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "firebase": "^11.0.1",
-    "flashsend": "file:",
     "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
     "react-native": "0.76.3",
