--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "ios": {
       "supportsTablet": true
     },
+    "notification": {"androidMode": "collapse", "androidCollapsedTitle": "New Messages"},
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
