--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
-    "au-react-native-toast": "^1.1.0",
+    "au-react-native-toast": "^1.1.3",
     "expo": "^52.0.11",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "^2.6.4",
     "react-native-image-picker": "^7.1.2",
     "react-native-mmkv": "^3.1.0",
