--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "expo-dev-client": "~5.0.2",
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.8",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
