can now send images and location plus UI improvements

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
     },
     "notification": {"androidMode": "collapse", "androidCollapsedTitle": "New Messages"},
     "android": {
+      "config": {"googleMaps": {"apiKey": ""}},
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
