--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.8",
-    "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
@@ -46,6 +45,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "^2.6.4",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "1.18.0",
     "react-native-mmkv": "^3.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
