--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,15 @@
       "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "components/CustomView.js", "components/AccessoryBar.js", "components/mediaUtils.js"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "components/CustomView.tsx",
+    "components/AccessoryBar.js",
+    "components/mediaUtils.tsx",
+    "Functions/Storage.js",
+    "app/chatRoom.js"
+  ]
 }
