--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "CodeGPT.apiKey": "CodeGPT Plus Beta",
     "cSpell.words": [
         "appspot",
+        "darkgreen",
         "Dont",
         "firebaseapp",
         "firestore",
