--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^7.0.0",
     "au-react-native-toast": "^1.1.3",
     "expo": "^52.0.11",
+    "expo-av": "~15.0.1",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.2",
@@ -34,6 +35,7 @@
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.8",
     "expo-router": "^4.0.11",
+    "expo-sharing": "^13.0.0",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
