--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "firestore",
         "Greenday",
         "lightgreen",
+        "Millis",
         "mmkv",
         "mobileprovision",
         "myapp",
