--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
-    "au-react-native-toast": "^1.1.3",
     "expo": "^52.0.11",
     "expo-av": "~15.0.1",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.2",
     "expo-device": "~7.0.1",
+    "expo-file-system": "^18.0.6",
     "expo-font": "~13.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.2",
+    "expo-media-library": "^17.0.4",
     "expo-notifications": "~0.29.8",
     "expo-router": "^4.0.11",
     "expo-sharing": "^13.0.0",
@@ -53,7 +55,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
