--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "components/ChatRoomBackground.tsx ",
     "Themes/DarkMode.js",
     "app/(main)/(homeStack)/home.js",
-    "env/firebaseConfig.js"
+    "env/firebaseConfig.js",
+    "services/NotificationActions.js",
+    "services/ExpoPushNotifications.js",
+    "services/RegisterForPushNotifications.js"
   ]
 }
