--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
-    "expo": "^52.0.11",
+    "expo": "^52.0.23",
     "expo-av": "~15.0.1",
+    "expo-background-fetch": "^13.0.3",
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.2",
@@ -35,12 +36,13 @@
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.2",
     "expo-media-library": "^17.0.4",
-    "expo-notifications": "~0.29.8",
+    "expo-notifications": "~0.29.11",
     "expo-router": "^4.0.11",
     "expo-sharing": "^13.0.0",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
+    "expo-task-manager": "^12.0.3",
     "firebase": "^11.0.1",
     "lottie-react-native": "^7.1.0",
     "react": "^18.3.1",
