--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^7.0.0",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/messaging": "^21.7.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.23",
     "expo-av": "~15.0.1",
     "expo-clipboard": "^7.0.0",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.2",
+    "expo-constants": "^17.0.4",
+    "expo-dev-client": "^5.0.10",
     "expo-device": "~7.0.1",
     "expo-file-system": "^18.0.6",
     "expo-font": "~13.0.1",
     "expo-image-picker": "^16.0.3",
-    "expo-linking": "~7.0.2",
+    "expo-linking": "^7.0.4",
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.11",
     "expo-router": "^4.0.11",
@@ -40,9 +44,9 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "firebase": "^11.0.1",
-    "lottie-react-native": "^7.1.0",
+    "lottie-react-native": "7.1.0",
     "react": "^18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "^2.6.4",
