switched from expo router to react navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,14 @@
     "components/AccessoryBar.js",
     "Functions/MediaUtils.ts",
     "Functions/Storage.ts",
-    "app/chatRoom.tsx",
+    "AppLayout/chatRoom.tsx",
     "components/InputToolBar.js",
     "components/ImageMessage.tsx",
     "components/ChatList.tsx",
     "components/AudioMessage.tsx",
     "components/ChatRoomBackground.tsx ",
     "Themes/DarkMode.js",
-    "app/(main)/(homeStack)/home.js",
+    "AppLayout/(main)/(homeStack)/home.js",
     "env/firebaseConfig.js",
     "services/NotificationActions.js",
     "services/ExpoPushNotifications.js",
