--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flashsend",
-  "main": "expo-router/entry",
-  "version": "3.0.0",
+  "main": "node_modules/expo/AppEntry",
+  "version": "4.0.0",
   "scripts": {
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
@@ -23,9 +23,13 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-firebase/firestore": "^21.7.1",
     "@react-native-firebase/messaging": "^21.7.1",
+    "@react-native-firebase/storage": "^21.7.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "^52.0.23",
     "expo-av": "~15.0.1",
     "expo-clipboard": "^7.0.0",
@@ -38,7 +42,6 @@
     "expo-linking": "^7.0.4",
     "expo-location": "^18.0.2",
     "expo-notifications": "~0.29.11",
-    "expo-router": "^4.0.11",
     "expo-sharing": "^13.0.0",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
@@ -53,6 +56,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "1.18.0",
     "react-native-mmkv": "^3.1.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
