--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,21 +12,10 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "components/CustomView.tsx",
-    "components/AccessoryBar.js",
-    "Functions/MediaUtils.ts",
-    "Functions/Storage.ts",
-    "AppLayout/chatRoom.tsx",
-    "components/InputToolBar.js",
-    "components/ImageMessage.tsx",
-    "components/ChatList.tsx",
-    "components/AudioMessage.tsx",
-    "components/ChatRoomBackground.tsx ",
-    "Themes/DarkMode.js",
-    "AppLayout/(main)/(homeStack)/home.js",
-    "env/firebaseConfig.js",
-    "services/NotificationActions.js",
-    "services/ExpoPushNotifications.js",
-    "services/RegisterForPushNotifications.js"
+    "components/**/*.{ts,tsx}",
+    "Functions/**/*.{ts,tsx}",
+    "AppLayout/**/*.tsx",
+    "Themes/**/*.{ts,tsx}",
+    "services/**/*.{ts,tsx}"
   ]
 }
